--- a/src/main/resources/static/css/proefpakket.css
+++ b/src/main/resources/static/css/proefpakket.css
@@ -13,3 +13,44 @@ blockquote {
 	margin-left: 0;
 	font-style: italic;
 }
+
+#alfabet {
+	list-style-type: none;
+	padding-left: 0;
+}
+#alfabet li {
+	display:inline;
+}
+dd {
+	margin-left:0;
+	font-weight: bold;
+}
+label {
+	cursor: pointer;
+}
+input, select {
+	display: block;
+	font-size: 1.1em;
+	margin-bottom: 1em;
+	margin-top: 0.2em;
+}
+input:focus, textarea:focus, select:focus {
+	background-color: #FFFFD6
+}
+input[type='checkbox'], input[type='radio'] {
+	display: inline;
+}
+label span, .fout {
+	background-color: red;
+	border-bottom-right-radius: 0.5em;
+	border-top-left-radius: 0.5em;
+	border-top-right-radius: 0.5em;
+	box-shadow: 5px 5px #777777;
+	margin-left: 0.5em;
+	padding: 0.5em;
+	color: white;
+	font-weight: bold;
+}
+label span:empty, .fout:empty {
+	display: none;
+}
