--- a/src/main/resources/templates/brouwer.html
+++ b/src/main/resources/templates/brouwer.html
@@ -16,5 +16,8 @@
     <div th:if="${brouwer} != null">
         <a th:href="@{/brouwers/{id}/ondernemingsnr(id=${brouwer.id})}">Ondernemingsnummer invullen</a>
     </div>
+    <div>
+        <a th:href="@{/brouwers/{id}/proefpakket(id=${brouwer.id})}">Proefpakket aanvragen.</a>
+    </div>
 </body>
 </html>
