--- a/src/main/resources/templates/brouwer.html
+++ b/src/main/resources/templates/brouwer.html
@@ -18,6 +18,7 @@
     </div>
     <div>
         <a th:href="@{/brouwers/{id}/proefpakket(id=${brouwer.id})}">Proefpakket aanvragen.</a>
+        <a th:href="@{/weer/{plaats}/temperatuur(plaats=${brouwer.adres.gemeente.naam})}">Temperatuur</a>
     </div>
 </body>
 </html>
