--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="nl" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="fragments::head(title='Proefpakket')"></head>
+<head th:replace="fragments::head(title=#{proefPakket})"></head>
 <body>
-    <h1>Proefpakket</h1>
-    <blockquote>Een pakket bieren van een brouwer naar uw keuze.</blockquote>
-    <img th:src="@{/images/brouwerij.jpg}" alt="brouwerij" class="fullwidth">
+    <h1 th:text="#{proefPakket}"></h1>
+    <blockquote th:text="#{pakketUwKeuze}"></blockquote>
+    <img th:src="@{/images/brouwerij.jpg}" th:alt="#{brouwerij}" class="fullwidth">
 
-    <div>Kies een brouwer</div>
+    <div th:text="#{kiesBrouwer}"></div>
     <ul id="alfabet">
         <li th:each="letter:${alfabet}">
             <a th:href="@{/alfabet/{letter}(letter=${letter})}" th:text="${letter}"></a>
@@ -17,5 +17,7 @@
             <a th:href="@{/brouwers/{id}(id=*{id})}" th:text="*{naam}"></a>
         </li>
     </ul>
+    <a th:href="@{?locale=nl_BE}">Nederlands</a>
+    <a th:href="@{?locale=fr_BE}">Français</a>
 </body>
 </html>
